Update and rename Home.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div class= "header">
         <div class="navbar">
             <ul>
-                <li><a href="Home.html">HOME</a></li>
+                <li><a href="Index.html">HOME</a></li>
                 <li><a href="Blog.html">BLOG</a></li>
                 <li><a href="Flex.html">FLEX</a></li>
             </ul>
